# Market-Magic

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
automation-scripts/: requirements.txt
sql-scripts/: create_schema.sql
src/data_ingestion/: fetch_news_sentiment.py  fetch_ohlvc.py  fetch_social_media_sentiment.py
